==> HorseMa/zephyr/drivers/sensor/ads1x9x/ADS1x9x.c <==
#include "ADS1x9x.h"
#include "driverlib.h"
#include "ADS1x9x_USB_Communication.h"
#include "eUSCIA1_SPI.h"
#include "StateMachine.h"
#include "Executive.h"
#define DELAY_COUNT 2

void ADS1x9x_Reset(void)
{
	unsigned short i;
	P2OUT |= (enum PORT2_ADC_CONTROL)ADC_RESET;		// Set High
	/* Provide suficient dealy*/
	for(i= 0;	i < 5000; i++);						// Wait 1 mSec
	P2OUT &= ~(enum PORT2_ADC_CONTROL)ADC_RESET;	// Set to low
	for(i= 0;	i < 5000; i++);					    // Wait 1 mSec
	P2OUT |= (enum PORT2_ADC_CONTROL)ADC_RESET;		// Set High
	for(i= 0;	i < 35000; i++);
}

void ADS1x9x_Disable_Start(void)
{
	unsigned short i;
    P2OUT &= ~(enum PORT2_ADC_CONTROL)ADC_START;	// Set to LOW
    for(i=0; i<35000; i++);        					// Small Delay to settle   
}

void ADS1x9x_Enable_Start(void)
{
	unsigned short i;
    P2OUT |= (enum PORT2_ADC_CONTROL)ADC_START;		// Set to High
    for(i=0; i<50000; i++);        					// Small Delay to settle   
}

void Set_ADS1x9x_Chip_Enable (void)
{
	/* ADS1x9x CS is Active low*/
	P3OUT &= ~(enum PORT3_ADC_CONTROL)SPI_CS;		// Set to LOW
}

void Clear_ADS1x9x_Chip_Enable (void)
{
  	uint8_t CsDelay;
  	
  	for ( CsDelay = 0;  CsDelay < 100 ;CsDelay++);
	/* ADS1x9x CS is Active low*/
	P3OUT |= (enum PORT3_ADC_CONTROL)SPI_CS;		// Set to High
}

void Init_ADS1x9x_DRDY_Interrupt (void)
{
	
	  P3DIR &= ~(enum PORT3_ADC_CONTROL)ADC_DRDY;
	  P3REN |= (enum PORT3_ADC_CONTROL)ADC_DRDY;                            	// Enable P1.1 internal resistance
	  P3OUT |= (enum PORT3_ADC_CONTROL)ADC_DRDY;                            	// Set P1.1 as pull-Up resistance
	  P3IES |= (enum PORT3_ADC_CONTROL)ADC_DRDY;                           	// P1.1 Lo/Hi edge
	  P3IFG &= ~(enum PORT3_ADC_CONTROL)ADC_DRDY;                           	// P1.1 IFG cleared
	  P3IE &= ~(enum PORT3_ADC_CONTROL)ADC_DRDY;                             	// P1.1 interrupt disabled
	
}

void Enable_ADS1x9x_DRDY_Interrupt (void)
{
	  P3IFG &= ~(enum PORT3_ADC_CONTROL)ADC_DRDY;                           	// P1.1 IFG cleared
	  P3IE |= (enum PORT3_ADC_CONTROL)ADC_DRDY;                             	// P1.1 interrupt enabled
}

void Disable_ADS1x9x_DRDY_Interrupt (void)
{
	  P3IFG &= ~(enum PORT3_ADC_CONTROL)ADC_DRDY;                           	// P1.1 IFG cleared
	  P3IE &= ~(enum PORT3_ADC_CONTROL)ADC_DRDY;                             	// P1.1 interrupt disabled
}

void ADS1x9x_SPI_Command_Data(uint8_t Data)
{
	uint8_t delayVar;
	Set_ADS1x9x_Chip_Enable();
	for (delayVar = 0; delayVar < 50; delayVar++);
	Clear_ADS1x9x_Chip_Enable();
	Set_ADS1x9x_Chip_Enable();
	
	UCA1TXBUF = Data;                                     // Send the data sitting at the pointer DATA to the TX Buffer
 	while ( (UCA1STATW & UCBUSY) );

	delayVar = UCA1RXBUF;

	for (delayVar = 0; delayVar < 150; delayVar++);

}

void Hard_Start_ReStart_ADS1x9x(void)
{
	P2OUT |= (enum PORT2_ADC_CONTROL)ADC_START;			// Set Start pin to High
}

void Hard_Stop_ADS1x9x (void)
{
  	unsigned short i, j;
    P2OUT &= ~(enum PORT2_ADC_CONTROL)ADC_START;		// Set Start pin to Low
    for (j = 0; j < DELAY_COUNT; j++)
    {
    	for ( i=0; i < 35000; i++);
    }
}

void ADS1x9x_Reg_Write (uint8_t READ_WRITE_ADDRESS, uint8_t DATA)
  { 
  	short i;
  	switch (READ_WRITE_ADDRESS)
  	{
  		case 1:
  			DATA = DATA & 0x87;
  		break;
  		case 2:
  			DATA = DATA & 0xFB;
  			DATA |= 0x80;
  			
  		break;
  		case 3:
  			DATA = DATA & 0xFD;
  			DATA |= 0x10;
  			
  		break;
  		case 7:
  			DATA = DATA & 0x3F;
  		break;
  		case 8:
  			DATA = DATA & 0x5F;
  		break;
  		case 9:
  			DATA |= 0x02;
  		break;
  		case 10:
  			DATA = DATA & 0x87;
  			DATA |= 0x01;
  		break;
  		case 11:
  			DATA = DATA & 0x0F;
  		break;
  		
  		default:
  		
  		break;
  		
  	}
	SPI_Tx_buf[0] = READ_WRITE_ADDRESS | WREG;
	SPI_Tx_buf[1] = 0;						// Write Single byte
	SPI_Tx_buf[2] = DATA;					// Write Single byte
	Set_ADS1x9x_Chip_Enable();
	
	for ( i =0; i < 50;i++);

	UCA1TXBUF = SPI_Tx_buf[0];              // Send the first data to the TX Buffer
 	while ( (UCA1STATW & UCBUSY) );			// USCI_B0 TX buffer ready?
	i = UCA1RXBUF;							// Read Rx buf

	UCA1TXBUF = SPI_Tx_buf[1];              // Send the first data to the TX Buffer
	while ( (UCA1STATW & UCBUSY) );			// USCI_B0 TX buffer ready?
	i = UCA1RXBUF;
	UCA1TXBUF = SPI_Tx_buf[2];              // Send the first data to the TX Buffer
	while ( (UCA1STATW & UCBUSY) );			// USCI_B0 TX buffer ready?
	i = UCA1RXBUF;

}

uint8_t ADS1x9x_Reg_Read(uint8_t Reg_address)
{

	uint8_t retVal;

	SPI_Tx_buf[0] = Reg_address | RREG;
	SPI_Tx_buf[1] = 0;							// Read number of bytes - 1

	Set_ADS1x9x_Chip_Enable();					// Set chip select to low

	UCA1TXBUF = SPI_Tx_buf[0];                  // Send the first data to the TX Buffer
	while ( (UCA1STATW & UCBUSY) );				// USCI_B0 TX buffer ready?
	UCA1TXBUF = SPI_Tx_buf[1];                  // Send the first data to the TX Buffer
	while ( (UCA1STATW & UCBUSY) );				// USCI_B0 TX buffer ready?
	retVal = UCA1RXBUF;							// Read RX buff
	UCA1TXBUF = 0x00;                           // Send the first data to the TX Buffer
	while ( (UCA1STATW & UCBUSY) );				// USCI_B0 TX buffer ready?
	retVal = UCA1RXBUF;							// Read RX buff

	Clear_ADS1x9x_Chip_Enable();				// Disable chip select
	return 	retVal;

}

void ADS1x9x_PowerOn_Init(void)
{
   volatile unsigned short Init_i, j;
   //Init_ADS1x9x_Resource();
   ADS1x9x_Reset();
 	for (j = 0; j < DELAY_COUNT; j++)
    {
      	for ( Init_i =0; Init_i < 20000; Init_i++);
   		for ( Init_i =0; Init_i < 20000; Init_i++);
   		for ( Init_i =0; Init_i < 20000; Init_i++);
    }
   Init_ADS1x9x_DRDY_Interrupt();
   ADS1x9x_Clock_Select(1);		// Set internal clock
   for ( Init_i =0; Init_i < 20000; Init_i++);
   for ( Init_i =0; Init_i < 20000; Init_i++);
   for ( Init_i =0; Init_i < 20000; Init_i++);

   //The START pin must be set high to begin conversions.
   ADS1x9x_Disable_Start();// Set to LOW
   ADS1x9x_Enable_Start();// Set to High

   Hard_Stop_ADS1x9x();

   Start_Data_Conv_Command();

   Soft_Stop_ADS1x9x();

   for (j = 0; j < DELAY_COUNT; j++)
    {
    	for ( Init_i =0; Init_i < 20000; Init_i++);
    }
   Stop_Read_Data_Continuous();					// SDATAC command
	for (j = 0; j < DELAY_COUNT; j++)
    {
       for ( Init_i =0; Init_i < 35000; Init_i++);
    }
	for (j = 0; j < DELAY_COUNT; j++)
    {
       for ( Init_i =0; Init_i < 35000; Init_i++);
    }
   ADS1x9x_Read_All_Regs(ADS1x9xRegVal);
   ADS1x9x_Default_Reg_Init();
   ADS1x9x_Read_All_Regs(ADS1x9xRegVal);

   ADS1x9x_PowerDown_Enable();

}
